# music_discourse_prediction

./: #bert_feat.sbatch#  '  .#bert_feat.sbatch  .#runall.bash  .gitignore  AMG1608_All_24-07-2022-20-53-19_EmoLex_features.csv  AMG1608_All_24-07-2022-20-53-52_EmoVAD_features.csv  AMG1608_All_24-07-2022-20-54-23_EmoAff_features.csv  AMG1608_All_24-07-2022-20-54-50_MPQA_features.csv  AMG1608_Reddit_01-05-2022-19-16-10_eANEW_features.csv  AMG1608_Reddit_01-05-2022-19-19-53_EmoLex_features.csv  AMG1608_Reddit_01-05-2022-19-22-50_EmoVAD_features.csv  AMG1608_Reddit_01-05-2022-19-25-47_EmoAff_features.csv  AMG1608_Reddit_01-05-2022-19-28-37_MPQA_features.csv  AMG1608_Reddit_08-01-2022-16-24-16_EmoVAD_features.csv  AMG1608_Reddit_08-01-2022-16-31-43_EmoLex_features.csv  AMG1608_Reddit_08-01-2022-16-37-56_EmoAff_features.csv  AMG1608_Reddit_08-01-2022-17-23-09_MPQA_features.csv  AMG1608_Reddit_23-12-2021-12-04-32_EmoVAD_features.csv  AMG1608_Reddit_23-12-2021-12-23-59_EmoVAD_features.csv  AMG1608_Reddit_23-12-2021-18-36-38_EmoLex_features.csv  AMG1608_Reddit_24-07-2022-20-38-13_eANEW_features.csv  AMG1608_Reddit_24-07-2022-20-38-18_EmoLex_features.csv  AMG1608_Reddit_24-07-2022-20-38-18_EmoVAD_features.csv  AMG1608_Reddit_24-07-2022-20-38-24_EmoAff_features.csv  AMG1608_Reddit_24-07-2022-20-38-24_MPQA_features.csv  AMG1608_Reddit_24-12-2021-17-11-08_eANEW_features.csv  AMG1608_Reddit_25-12-2021-20-58-22_MPQA_features.csv  AMG1608_YouTube_25-07-2022-21-43-50_EmoVAD_features.csv  AMG1608_YouTube_25-07-2022-21-44-37_EmoVAD_features.csv  AMG1608_YouTube_25-07-2022-21-59-39_EmoVAD_features.csv  AMG1608_YouTube_25-07-2022-22-16-24_EmoVAD_features.csv  AMG1608_YouTube_25-07-2022-22-22-19_EmoVAD_features.csv  AMG1608_YouTube_25-07-2022-22-32-18_EmoVAD_features.csv  KievitOffc-Bold.pkl  KievitOffc.pkl  MANIFEST.in  README.md  Song-level-predictions-amg.csv  all_AMG1608_Reddit.csv  (+30 more)
allall/: all_DEAM_All.csv  all_PmEmo_All.csv
datasets/: AMG1608.csv  DEAM.csv  DEAM_NEW.csv  DEEZER_test.csv  DEEZER_train.csv  DEEZER_validation.csv  PMEMO.csv
etc/: classification_experiment.ini  regression_experiment.ini
results/: Reddit Youtube Twitter_amg1608_results.csv  Twitter_amg1608_results.csv  Youtube Reddit Twitter_pmemo_results.csv  Youtube_amg1608_results.csv
scripts/: deezer_run.sh  ds_stats.py  make_ds_profile.py  (+3 more)
(+187 files in other folders)
