[metadata]
name = music_discourse_prediction
version = 0.0.1

[options.entry_points]
console_scripts =
    prediction = prediction.prediction:main
    reddit_mining = data_mining.reddit.reddit_extraction:main

[options]
packages = find:
package_dir =
    =src

install_requires =
    cycler==0.10.0
    imbalanced-learn==0.8.0
    imblearn==0.0
    joblib==1.0.1
    kiwisolver==1.3.1
    matplotlib==3.4.1
    numpy==1.20.2
    pandas==1.2.4
    Pillow==8.2.0
    pyparsing==2.4.7
    python-dateutil==2.8.1
    pytz==2021.1
    scikit-learn==0.24.2
    scipy==1.6.3
    six==1.15.0
    sklearn==0.0
    threadpoolctl==2.1.0
    tqdm==4.61.2
    build==0.6.0.post1
    certifi==2021.5.30
    charset-normalizer==2.0.4
    click==8.0.1
    cycler==0.10.0
    fpdf2==2.4.2
    idna==3.2
    imbalanced-learn==0.8.0
    imblearn==0.0
    joblib==1.0.1
    kiwisolver==1.3.1
    matplotlib==3.4.1
    numpy==1.20.2
    packaging==21.0
    pandas==1.2.4
    pep517==0.11.0
    Pillow==8.2.0
    praw==7.4.0
    prawcore==2.3.0
    pyparsing==2.4.7
    python-dateutil==2.8.1
    pytz==2021.1
    requests==2.26.0
    scikit-learn==0.24.2
    scipy==1.6.3
    seaborn==0.11.1
    six==1.15.0
    sklearn==0.0
    threadpoolctl==2.1.0
    tomli==1.2.1
    tqdm==4.61.2
    update-checker==0.18.0
    urllib3==1.26.6
    websocket-client==1.1.1


[options.packages.find]
where = src
include = *
