[metadata]
name = music_discourse_prediction
version = 0.0.1

[options.entry_points]
console_scripts =
    prediction = prediction.prediction:main
    data_mining = data_mining.comment_extraction:main
    wordbag_features = feature_engineering.wordbag_model.wordbag:main
    bert_features = feature_engineering.bert.bert_emotion_predictor:main

[options]
packages = find:
package_dir =
    =src


[options.packages.find]
where = src
include = *
