[metadata]
name = music_discourse_prediction
version = 0.0.1

[options.entry_points]
console_scripts =
    data_mining = data_mining.comment_extraction:main
    bert_features = bert.bert_emotion_predictor:main
    mongo_songs = database.mongo_songs:main

[options]
packages = find:
package_dir =
    =src


[options.packages.find]
where = src
include = *
